--- a/client-state-scalability/src/main/resources/application.yml
+++ b/client-state-scalability/src/main/resources/application.yml
@@ -1,3 +1,36 @@
-spring:
+server:
+  port: 8080
   application:
-    name: client-state-scalability
+    name: system-design-mindset
+  servlet:
+    session:
+      timeout: 30m
+      cookie:
+        name: JSESSIONID
+        http-only: true
+        secure: false # Production'da true olmalı
+
+spring:
+  datasource:
+    url: jdbc:h2:mem:testdb
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: create-drop
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+
+logging:
+  level:
+    com.systemdesign: DEBUG
+    org.springframework.web: INFO
+    org.hibernate.SQL: DEBUG
